# dino

./: .gitignore  CMakeLists.txt  buffer.cpp  buffer.h  controller.cpp  controller.h  cube.gltf  main.cpp  parser.cpp  parser.h  shader.cpp  shader.h  shader.vert  signal.h  test_buffer.cpp  test_gltf.cpp  test_interpolator.cpp  world.cpp
adh/: CMakeLists.txt  animation.cpp  animation.h  camera.cpp  camera.h  channel.h  clock.h  color.h  context.cpp  context.h  interpolator.h  material.cpp  material.h  node.cpp  node.h  plaincolor.cpp  plaincolor.h  primitive.cpp  primitive.h  rtclock.cpp  rtclock.h  shader.cpp  shader.h  texture.cpp  texture.h  texturecolor.cpp  texturecolor.h  transform.cpp  transform.h
core/: CMakeLists.txt  json_utils.cpp  json_utils.h
data/shoot/: nodes.json
data/shoot/ball/: ball.gltf
data/shoot/ball2/: ball2.gltf
dino/: CMakeLists.txt  controller.cpp  controller.h  main.cpp  world.h
entity/: CMakeLists.txt  entityfactory.cpp  entityfactory.h  entityid.h  strongid.h  system.h
gltf/: CMakeLists.txt  accessor.cpp  accessor.h  asset.cpp  asset.h  buffer.cpp  buffer.h  bufferview.cpp  bufferview.h  builder.cpp  builder.h  json_utils.cpp  json_utils.h  nodecache.cpp  nodecache.h
models/: animation.gltf  animation3.gltf  maison.gltf  transforms.gltf
models/arbre/: arbre.blend
models/diplo/: diplo.blend  diplo.gltf
models/farm/: farm.blend  farm.gltf
models/mill/: mill.blend
models/samples/: plain.blend  plain.gltf  rotate.blend  rotate.gltf  scale.blend  translate.blend  translate_cubic.blend
models/shoot/: ball.gltf  ball2.blend  ball_separate.gltf  shoot.blend  temple.blend  temple.gltf
models/torus/: torus.blend
shaders/: pbr.frag  pbr.vert
shoot/: CMakeLists.txt  body.cpp  body.h  graphicsystem.cpp  graphicsystem.h  main.cpp  nodes.json  physicsystem.cpp  physicsystem.h
tests/: CMakeLists.txt  test_body.cpp  test_interpolator.cpp
tests/data/: body_sphere.json
